syntax = "proto3";

package consignment;

service ShippingService {
  rpc CreateConsignment(Consignment) returns (Response) {}
  rpc GetConsignments(GetRequest) returns (Response) {}
}

message Consignment {
  string id = 1;
  string description = 2;
  int32 weight = 3;
  repeated Container contains = 4;
  string vesselId = 5;
}

message Container {
  string id = 1;
  string customerId = 2;
  string origin = 3;
  string userId = 4;
}

message GetRequest {}

message Response {
  bool created = 1;
  Consignment consignment = 2;
  repeated Consignment consignments = 3;
}